--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -2,5 +2,6 @@
     <string name="app_name">Калькулятор</string>
     <string name="div_zero">нельзя делить на ноль</string>
     <string name="clear">ОЧИСТИТЬ</string>
+    <string name="cleared">очищено</string>
     <string name="error">ошибка неверная операция</string>
 </resources>
